README Updates and bug fix
*Updated the readme for the coming release
*Fixed a bug in the multi domain fast render view mode