@@ -3,31 +3,32 @@ Design Structure Matrix editor (DSM editor) - An open-source application for edi
 
 ---
 
-### Dependencies
-[jdom 2.0.6 - XML Parser](http://www.jdom.org/downloads/)
+### Features
+* Multiple DSM types: Multi-Domain, Symmetric, and Asymmetric
+* Functionality to easily configure elements and their order, domains, groupings, and connections
+* Interface Types for connections
+* Opening breakout views for Multi-Domain DSMs to edit a smaller matrix 
+* Fast Render mode that removes a lot of graphical detail to load bigger matrices faster and see a bigger picture
+* Propagation Analysis
+* Export to various formats: CSV, Excel, PNG, Thebeau Matlab File 
 
-[apache poi 5.0.0 - Excel Parser](https://poi.apache.org/download.html#POI-5.0.0)
 
-[javafx 11.0.2 - Graphics Library](https://gluonhq.com/products/javafx/) (Note: this is needed as a runtime dependency as well as compile time)
+### To Install for Developers (version >= 2.0.0)
+Requirements:
+* Maven
+* IntelliJ (or another IDE)
 
----
+Maven will install all the dependencies. There may be issues with the java runtime version not being installed correctly. If there are cryptic run-time issues, most likely the correct version (16.0.2) of java is not installed
 
-### To Install
-Download the latest .jar file and the installer. Run the installer and a batch script titled <code>DSMEditor.bat</code> will be created in the current directory and is used to run the program.
 
-or
-* Download the latest .jar file from the releases page
-* Download the javafx Library
-* Make sure java 16.0.1 is installed and is on the path
-
-### To Run
-If you used the installer, you can run the program with the created batch file <code>DSMEditor.bat</code>
-
-To run from the command prompt use
-<code>java -jar --module-path "(path_to_javafx_sdk)\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls (name_of_jar_file)</code>
+### To Install for Users (version >= 2.0.0)
+* Go to the [releases page](https://github.com/ajcarney/DSMEditor/releases) and download the latest zip or tar file for your operating system
+* Unzip the file to a known directory with write permissions so that the program can save to files
+* No need to install anything else (including java) as the program comes pre-packaged with an open-source version of the Java runtime from [Adoptium](https://adoptium.net/) (no need to mess with Oracle anymore)
+* The zip file includes an executable (.exe for windows or .sh for unix) that will start the program
 
 ### Getting Started
-To create a new matrix, select the "File" drop-down menu and select "New...". You can create either a symmetrical or non-symmetrical matrix.
+To create a new matrix, select the "File" drop-down menu and select "New...". Choose any of the types available
 
 To modify row items, use the toolbar on the left-hand side of the screen
 
@@ -37,25 +38,24 @@ Connections can be created using either the toolbar or clicking directly on a ce
 
 ### Sample Usage
 <p style="border-width: 2px; border-color: black; border-style:solid;" align="center">
+    <img src="gallery/sample.png" width=1000>
+    Sample Multi-Domain DSM
+</p>
+<p style="border-width: 2px; border-color: black; border-style:solid;" align="center">
+    <img src="gallery/fast_render.png" width=1000>
+    Sample Multi-Domain DSM - Fast Render View Mode
+</p>
+<p style="border-width: 2px; border-color: black; border-style:solid;" align="center">
+    <img src="gallery/zoom.png" width=1000>
+    Symmetric Breakout View for a Multi-Domain DSM
+</p>
+<p style="border-width: 2px; border-color: black; border-style:solid;" align="center">
     <img src="gallery/modify_connection.png" width=1000>
     Editing DSM connections
 </p>
 <p style="border-width: 2px; border-color: black; border-style:solid;" align="center">
-    <img src="gallery/sample.png" width=1000>
-    Sample symmetric DSM of a clock
-</p>
-<p style="border-width: 2px; border-color: black; border-style:solid;" align="center">
     <img src="gallery/propagation_analysis.png" width=1000>
     Propagation analysis for the sample matrix
-</p>
-<p style="border-width: 2px; border-color: black; border-style:solid;" align="center">
-    <img src="gallery/cluster_algorithm.png" width=1000>
-    <div align="center">
-        Automatic clustering for the sample matrix based on 
-        <a href="https://dsmweb.org/matlab-macro-for-clustering-dsms/">
-          Ronnie Thebeau's clustering algorithm
-        </a>
-    </div>
 </p>
 
 ---
@@ -67,8 +67,9 @@ If you encounter any bugs or would like to submit a feature request, feel free t
 [MIT](https://opensource.org/licenses/MIT)
 
 ### Project Status
-This project is in semi-active development with commits as needed. New features are typically only being added on request.
+This project is in semi-active development. As a college student, the school year is busy, and as such, the majority of development is done during the summer months
 ##### What's Next?
-* Bug fixes
-* Propagation analysis with only specified connection names
-* Keyboard bindings
+* Better Support for Interface Types
+* ICM Transformations
+* UI Fixes
+* Performance improvements
